--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,9 @@ deploy_job:
         - echo "--Deploy_Startied--" >> $LOG_FILE
         - docker compose up -d >> $LOG_FILE 2>&1
         - echo "--Deploy_Completed--"  >> $LOG_FILE
+    artifacts:
+      paths:
+          - $LOG_FILE
     tags:
         - python
 
