добавил default на артифакты и теги

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,16 @@ stages:
     -  stage_build
     -  stage_test
     -  stage_deploy
+
 variables:
   LOG_FILE: log.txt
+
+default:
+  artifacts:
+      paths:
+          - $LOG_FILE
+      tags:
+          - python
 
 build_job:
     stage: stage_build
@@ -11,34 +19,21 @@ build_job:
         - echo "---Build_startied--" >> $LOG_FILE
         - docker compose build >> $LOG_FILE 2>&1
         - echo "---Build_completed--" >> $LOG_FILE
-    artifacts:
-      paths:
-          - $LOG_FILE
-    tags:
-        - python
-
+    
 test_job:
     stage: stage_test
     script:
         - echo "---Test_startied--" >> $LOG_FILE
        
         - echo "---Test_completed--" >> $LOG_FILE
-    artifacts:
-      paths:
-          - $LOG_FILE
-    tags:
-        - python
+  
 deploy_job:
     stage: stage_deploy
     script:
         - echo "--Deploy_Startied--" >> $LOG_FILE
         - docker compose up -d >> $LOG_FILE 2>&1
         - echo "--Deploy_Completed--"  >> $LOG_FILE
-    artifacts:
-      paths:
-          - $LOG_FILE
-    tags:
-        - python
+    
 
 
 
