--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 services:
   python:
     build: .
+    image: devops_lab_python
     command: python ./main.py
     ports:
       - 8081:5000
 
   tests:
     build: .
+    image: devops_lab_test
     command: pytest -v tests
